<resources>
    <string name="app_name">Paymate</string>
    <string name="loginTitle">Login</string>
    <string name="registerTitle">Register</string>
    <string name="groupsTitle">Groups</string>
    <string name="newGroupTitle">Get a new Group!</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="registerMessage">¿Aún no tienes una cuenta? ¡Regístrate ahora!</string>
    <string name="loginMessage">¿Ya tienes una cuenta? Inicia sesión ahora.</string>
    <string name="internetException">No hay conexión a internet. Vuelve a intentarlo en un rato.</string>
    <string name="loginError">Error iniciando sesión, compruebe sus credenciales y vuelva a intentarlo.</string>
    <string name="registerError">Error registrando al usuario, vuelve a intentarlo más tarde.</string>
    <string name="title_activity_grupo">GrupoActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="quotationError">Error iniciando sesión, compruebe sus credenciales y vuelva a intentarlo.</string>
    <string name="nameMember">Nombre</string>
    <string name="groupName">Nombre del grupo</string>
    <string name="addMember">+</string>
    <string name="group_create_button">Crear grupo</string>
    <string name="title_deudas">Deudas</string>
    <string name="title_gastos">Gastos</string>
    <string name="btn_add_description">Botón para añadir gastos</string>
    <string name="expense_quantity_hint">Ej.: 20.80</string>
    <string name="create_expense">Crear gasto</string>
    <string name="create_expense_title">Título del gasto:</string>
    <string name="create_expense_title_hint">Ej.: Cena día 2</string>
    <string name="create_expense_quantity">Cantidad:</string>
    <string name="btn_crear">Crear</string>
    <string name="pay_debt_button_text">Pagar deuda</string>
    <string name="group_text">Grupo: </string>
    <string name="amount_to_pay_text">Cantidad adeudada: </string>
    <string name="pay_amount_hint">Cantidad del pago</string>
    <string name="confirm_payment_button_text">Realizar pago</string>
    <string name="create_expense_error">Ha ocurrido un error inesperado, vuelva a intentarlo más tarde.</string>
</resources>