<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >
    <TextView
        android:id="@+id/groupNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:padding="16dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/amountToPayTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_to_pay_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="center"
        android:padding="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        />

    <EditText
        android:id="@+id/payAmountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/pay_amount_hint"
        android:padding="16dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/confirmPaymentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/confirm_payment_button_text"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
