<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/groupName"
        app:layout_constraintBottom_toTopOf="@+id/personName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/personName"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nameMember"
        app:layout_constraintBottom_toTopOf="@+id/members"
        app:layout_constraintEnd_toStartOf="@id/addMember"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupName" />

    <Button
        android:id="@+id/addMember"
        android:layout_width="44dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/addMember"
        app:layout_constraintTop_toBottomOf="@id/groupName"
        app:layout_constraintBottom_toTopOf="@id/members"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/personName"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@id/createGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personName" />

    <Button
        android:id="@+id/createGroup"
        android:layout_width="157dp"
        android:layout_height="51dp"
        android:text="@string/group_create_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/members" />

</androidx.constraintlayout.widget.ConstraintLayout>

