<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/groupName"
        app:layout_constraintBottom_toTopOf="@+id/members"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <TextView
        android:id="@+id/members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="396dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personName"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/addMember"
        android:layout_width="44dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/addMember"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toEndOf="@+id/personName"
        app:layout_constraintTop_toBottomOf="@+id/groupName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/personName"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_marginStart="76dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nameMember"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="208dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="157dp"
        android:layout_height="51dp"
        android:text="@string/group_create_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/members" />

</androidx.constraintlayout.widget.ConstraintLayout>